--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <module>cloud-eureka-server</module>
     <module>cloud-eureka-server02</module>
     <module>cloud-provider-payment02</module>
+    <module>cloud-feign-order</module>
+    <module>cloud-provider-hystrix-payment</module>
   </modules>
   <packaging>pom</packaging>
 
