--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>cloud-provider-hystrix-payment</module>
     <module>cloud-consumer-feign-hystrix-order</module>
     <module>cloud-consumer-hystrix-disboard</module>
+    <module>cloud-gateway</module>
   </modules>
   <packaging>pom</packaging>
 
