--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>cloud-consumer-feign-hystrix-order</module>
     <module>cloud-consumer-hystrix-disboard</module>
     <module>cloud-gateway</module>
+      <module>cloud-config-center</module>
   </modules>
   <packaging>pom</packaging>
 
