--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,11 @@
     <module>cloud-alibaba-provider-payment02</module>
     <module>cloud-alibaba-consumer-nacos-order</module>
     <module>cloud-nacos-config</module>
-      <module>cloudalibaba-sentitnel-service8401</module>
+    <module>cloudalibaba-sentitnel-service8401</module>
+    <module>nacos-payment02</module>
+    <module>nacos-payment</module>
+    <module>nacos-order</module>
+    <module>cloud-nacos-config</module>
   </modules>
   <packaging>pom</packaging>
 
