--- a/cloud-nacos-config/src/main/resources/bootstrap.yml
+++ b/cloud-nacos-config/src/main/resources/bootstrap.yml
@@ -9,15 +9,12 @@ spring:
     nacos:
       discovery:
 #        不可以带http
-        server-addr: 192.168.71.30:8848
+        server-addr: 192.168.65.28:8848
       config:
-        server-addr: 192.168.71.30:8848
+        server-addr: 192.168.65.28:8848
         file-extension: yaml
-#        指定使用哪个分组
-        group: DEV_GROUP
-#        命名空间
-        namespace: 4539a331-cd47-4eb4-92fe-b12c78518f6e
 
 #公式
+# config的dataid名称
 #${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
-#结果：nacos-config-client
+#结果：nacos-config-client-dev.yaml
