--- a/cloudalibaba-sentitnel-service8401/src/main/resources/application.yml
+++ b/cloudalibaba-sentitnel-service8401/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.71.30:8848
+        server-addr: 192.168.65.28:8848
     sentinel:
       transport:
-        dashboard: localhost:8080
+        dashboard: 192.168.65.28:8080
         port: 8719
 
 management:
